cmake_minimum_required(VERSION 3.5.0)
project(App1 VERSION 0.1.0 LANGUAGES C CXX)
SET(GCC_COVERAGE_COMPILE_FLAGS "-lmosquitto")
SET(GCC_COVERAGE_LINK_FLAGS    "-lmosquitto")
include(CTest)
enable_testing()

add_executable(App1 main.cpp)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
target_include_directories(App1 PRIVATE "C:/Program Files/mosquitto/devel")
target_link_directories(App1 PRIVATE "C:/Program Files/mosquitto/devel")
target_link_libraries(App1 PRIVATE mosquitto)

target_include_directories(App1 PRIVATE "D:/Projects/C++/App1/Libs/CommandLine/src")
include_directories("D:/Projects/C++/App1/Libs/CommandLine/src")
target_link_directories(App1 PRIVATE "D:/Projects/C++/App1/Libs/CommandLine/src")
add_subdirectory(Libs/CommandLine)
target_link_libraries(App1 PRIVATE commandline  wsock32 ws2_32)
#ADD_CUSTOM_TARGET(main.cpp)

#target_link_libraries(APP1 "../Libs/CommandLine/src/commandline.h")
# add_library(App1, ../Libs/CommandLine/src/commandline.h)
# target_link_libraries(App1 PRIVATE Mosquitto.h)
# add_subdirectory(Libs/)
#add_library(Logger.h STATIC IMPORTED "D:/Projects/C++/App1/Libs/Logger.h")
#target_include_directories(App1 PRIVATE "D:/Projects/C++/App1/Libs/Logger.h")
